修改了index.html轮播图部分

--- a/index.html
+++ b/index.html
@@ -92,12 +92,21 @@
         </div>
         <div class='item' data-slide-to="1">
             <a href="#" class="img_box" style="background:url('images/slide_02_2000x410.jpg')"></a>
+            <a href="" class="img_mobile hidden-lg hidden-md hidden-sm">
+                <img src="images/slide_01_640x340.jpg" alt="">
+            </a>
         </div>
         <div class='item' data-slide-to="2">
             <a href="#" class="img_box" style="background:url('images/slide_03_2000x410.jpg')"></a>
+            <a href="" class="img_mobile hidden-lg hidden-md hidden-sm">
+                <img src="images/slide_01_640x340.jpg" alt="">
+            </a>
         </div>
         <div class='item' data-slide-to="2">
             <a href="#" class="img_box" style="background:url('images/slide_04_2000x410.jpg')"></a>
+            <a href="" class="img_mobile hidden-lg hidden-md hidden-sm">
+                <img src="images/slide_01_640x340.jpg" alt="">
+            </a>
         </div>
     </div>
 
