修改基础信息

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="css/index.css"/>
     <link rel="stylesheet" href="css/top.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <!--[if lt IE 9]>
     <script src="lib/html5shiv/html5shiv.min.js"></script>
     <script src="lib/respond/respond.min.js"></script>
@@ -70,7 +71,7 @@
                         <ul class="introduce-con">
                             <li>
                                 <span class="key">Name</span>
-                                <span class="value">陈珊珊</span>
+                                <span class="value">夏之珊</span>
                             </li>
                             <li>
                                 <span class="key">DOB</span>
@@ -78,7 +79,7 @@
                             </li>
                             <li>
                                 <span class="key">PHONE</span>
-                                <span class="value">18210421763</span>
+                                <span class="value">***********</span>
                             </li>
                             <li>
                                 <span class="key">ADDRESS</span>
@@ -86,7 +87,7 @@
                             </li>
                             <li>
                                 <span class="key">E-MAIL</span>
-                                <span class="value">shanshan.chen@ptmind.com</span>
+                                <span class="value">********.****@*******.com</span>
                             </li>
                             <li>
                                 <span class="key">网站</span>
@@ -176,13 +177,54 @@
             </div>
         </section>
         <hr>
-
-        <section class="part-three">
-
-        </section>
     </div>
     
+    <footer class="footer">
+        <div class="footer-top container">
+            <div class="row">
+                <div class="left col-ms-12 col-md-6">
+                    <ul class="clearfix">
+                        <li><a href="./index.html">Home</a><span class="line"></span></li>
+                        <li><a href="./pages/home.html">Hometwon</a><span class="line"></span></li>
+                        <li><a href="./pages/hobbit.html">Hobby</a><span class="line"></span></li>
+                        <li><a href="./pages/read.html">Read</a><span class="line"></span></li>
+                        <li><a href="./pages/entertainment.html">enterainment</a><span class="line"></span></li>
+                        <li><a href="./pages/demo.html" target="_blank">demo</a><span class="line"></span></li>
+                    </ul>
+                    <div class="partern">
+                        <span class="mr20 txt">Contact</span>
+                        <span class="footer-icon"><i class="fab fa-facebook-square"></i></span>
+                        <span class="footer-icon"><i class="fab fa-twitter-square"></i></span>
+                        <span class="footer-icon"><i class="fab fa-blogger"></i></span>
+                        <span class="footer-icon"><i class="fab fa-chrome"></i></span>
+                    </div>
+                </div>
+                <div class="right col-ms-12 col-md-6">
+                    <span class="mail-icon"><i class="fas fa-envelope-open"></i></span>
+                   <div class="footer-form">
+                        <p>Join Me</p>
+                        <div class="input-wrap">
+                            <div>
+                                <input type="text" placeholder="input your name">
+                                <a class="btn" href="mailTo:shanshan.chen@ptmind.com">Submit</a>
+                            </div>
+                        </div>   
+                   </div>
+                </div>
+            </div>
+        </div>
 
+        <div class="footer-bottom">
+            <div class="left fl">
+                <p>Created by shanshan at 09.Aug 2018 18:05</p>
+                <p>Privacy Policy</p>
+            </div>
+            <div class="right fr">
+                <p>Adress:http://132.232.45.166</p>   
+                <p>132.232.45.166</p>
+            </div>
+        </div>
+    </footer>
 
 
 
